[package]
name = "ws2812b"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.5"
embedded-time = "0.12.0"
log = "0.4.20"
panic-reset = "0.1.1"
rp2040-hal = { version = "0.8", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
critical-section = "1.1.2"

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
